force-app/main/default/objects/CSV_Export_File_Line__mdt/CSV_Export_File_Line__mdt.object-meta.xml
<CustomObject>
    <description>Use this to specify the lines item mapping for the export</description>
    <label>CSV Export File Line</label>
    <pluralLabel>CSV Export File Lines</pluralLabel>
</CustomObject>