force-app/main/default/objects/CSV_Export_File_Line__mdt/fields/CSV_Export_File__c.field-meta.xml
<CustomField>
    <fullName>CSV_Export_File__c</fullName>
    <inlineHelpText>Specify the Export file this line is related to</inlineHelpText>
    <label>CSV Export File</label>
    <referenceTo>CSV_Export_File__mdt</referenceTo>
    <relationshipLabel>CSV Export File Lines</relationshipLabel>
    <relationshipName>CSV_Export_File_Lines</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>