force-app/main/default/objects/CSV_Export_File_Line__mdt/fields/Line__c.field-meta.xml
<CustomField>
    <fullName>Line__c</fullName>
    <defaultValue>1</defaultValue>
    <inlineHelpText>In cases where the same data is required to populate multiple lines the you can specify the additional numbers for processing. An example of this might be a finance journal export where you have a positive and a negative export.</inlineHelpText>
    <label>Line</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>