force-app/main/default/objects/CSV_Export_File_Line__mdt/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <defaultValue>1</defaultValue>
    <inlineHelpText>Specify the order the field should appear in the export, ensure this matches up to your CSV Header entry on the parent file record</inlineHelpText>
    <label>Order</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>