force-app/main/default/objects/CSV_Export_File_Line__mdt/fields/Output_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Output_Field_API_Name__c</fullName>
    <inlineHelpText>Use this to specify the field API name to output - it must be related to the object you are exporting. As an example on an Opportunity you could have Name or Account.Name or Account.Owner.Name and this would output on to the file.</inlineHelpText>
    <label>Output Field API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>